--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>twoefay client</title>
+<title>{%block title %}twoefay client{% endblock title %}</title>
  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -59,7 +59,7 @@
                     class="p-r-none">Accounts</a></li>
             {% else %}
                 <li><a href="">Login</a></li>
-                <li><a href="" class="p-r-none">Sign Up</a></li>
+                <li><a href="{% url 'sub_new' %}" class="p-r-none">Sign Up</a></li>
             {% endif %}
           </ul>
       </li>
