--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -54,11 +54,11 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Menu <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             {% if user.is_authenticated %}
-                <li><a href="">Logout</a></li>
+                <li><a href="/logout/">Logout</a></li>
                 <li><a href=""
                     class="p-r-none">Accounts</a></li>
             {% else %}
-                <li><a href="">Login</a></li>
+                <li><a href="/login/">Login</a></li>
                 <li><a href="{% url 'sub_new' %}" class="p-r-none">Sign Up</a></li>
             {% endif %}
           </ul>
