--- a/hello/templates/login.html
+++ b/hello/templates/login.html
@@ -1,34 +1,32 @@
 {% extends 'base.html' %}
-{% block title %}Login{% endblock %}
+{% block title %}Login{% endblock title %}
 
 {% block content %}
     <div id="content-container" class="container p-none">
-        <div class="lgn-container col-lg-8">
-            <form id="login-form" method="post" 
-                  action="{% url 'django.contrib.auth.views.login' %}">
+        <div class="side-p">
+            <form id="user-reg-form" action="." method="post">
                 {% csrf_token %}
+                <h3>Login to your ccount</h3>
                 <table class="table">
-                    <tr>
-                        <td><label for="id_username">Username</label></td>
-                        <td><input id="id_username" name="username" 
-                                   type="text" class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="id_password">Password</label></td>
-                        <td><input id="id_password" name="password" 
-                                   type="password" class="form-control"></td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <th>{{ form.username.label }}</th>
+			    <th>{{ form.password.label }}</th>
+                        </tr>
+                        <tr>
+                            <td>{{ form.username }}</td>
+                            <td>{{ form.password }}</td>
+                        </tr>
+                    </tbody>
                 </table>
-                {% if form.errors %}
+		{% if form.errors %}
                     <p class=" label label-danger">
-                        Your username and password didn't match. 
+                        Your username and password didn't match.
                         Please try again.
                     </p>
                 {% endif %}
-
-                <input type="submit" value="Login" 
-                       class="btn btn-primary pull-right" />
-                <input type="hidden" name="next" value="{{ next }}" />
+                <input class="btn btn-primary" type="submit" value="login">
+		<input type="hidden" name="next" value="{{ next }}" />
             </form>
         </div>
     </div>
