--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 <title>{%block title %}twoefay client{% endblock title %}</title>
  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <style type="text/css">
@@ -66,7 +67,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> Login Name Var</a>
+        <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> {% block member_id %} Login Name Var{% endblock member_id %}</a>
       </li>
     </ul>
   </div>
@@ -79,9 +80,15 @@
         {% endblock content %}
     </div>
     {# The Footer #}
-    <div class="footer">
+    <!--<div class="footer">
         <div class="container">
         </div>
+    </div>-->
+    <div class = "footer">
+      <div class="container">
+    <footer class = "container-fluid text-center">
+      <p>Footer Text </p>
+      </footer></div>
     </div>
 
 </body>
