--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,55 +1,64 @@
 {% extends 'base.html' %}
-{% block title %}Signup{% endblock title %}
+{% block title %}Fay's Store{% endblock title %}
 
 {% block content %}
-    <div id="content-container" class="container p-none">
-        <div class="side-p">
-            <form id="user-reg-form" action="." method="post">
-                {% csrf_token %}
-                {# Username & Password Section #}
-                <h3>Signup for a $15 Monthly Subscription</h3>
-                <h5 class="sn-sh">CREATE A USERNAME AND PASSWORD</h5>
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th>{{ form.username.label }}</th>
-                            <th>{{ form.email.label }}</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.username }}</td>
-                            <td>{{ form.email }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.username.errors }}</td>
-                            <td>{{ form.email.errors }}</td>
-                        </tr>
-			<tr>
-			  <th>Phone Number</th>
-			</tr>
-			<tr>
-			  <td>{{ form.phone }}</td>
-			</tr>
-			<tr>
-			  <td>{{ form.phone.errors }}</td>
-			</tr>
-                        <tr>
-                            <th>Password</th>
-                            <th>Confirm Password</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.password1 }}</td>
-                            <td>{{ form.password2 }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.password1.errors }}</td>
-                            <td>{{ form.password2.errors }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                {# Billing Address Section #}
-                <input class="btn btn-primary" type="submit" value="submit">
-            </form>
-            {# Credit Card Section #}
-        </div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="http://placehold.it/1200x400?text=IMAGE" alt="Image">
+        <div class="carousel-caption">
+          <h3>Sell $</h3>
+          <p>Money Money.</p>
+        </div>      
+      </div>
+
+      <div class="item">
+        <img src="http://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+        <div class="carousel-caption">
+          <h3>More Sell $</h3>
+          <p>Lorem ipsum...</p>
+        </div>      
+      </div>
     </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+  
+<div class="container text-center">    
+  <h3>What We Do</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Current Project</p>
+    </div>
+    <div class="col-sm-4"> 
+      <img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Project 2</p>    
+    </div>
+    <div class="col-sm-4">
+      <div class="well">
+       <p>Some text..</p>
+      </div>
+      <div class="well">
+       <p>Some text..</p>
+      </div>
+    </div>
+  </div>
+</div><br>
 {% endblock content %}
+{% block member_id %} {{ member_id }} {% endblock member_id %}
