Add integration with twoefay PROD server

--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -67,7 +67,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> {% block member_id %} Login Name Var{% endblock member_id %}</a>
+        <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> {% block member_id %} Guest{% endblock member_id %}</a>
       </li>
     </ul>
   </div>
