Update UI on index page

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -7,23 +7,34 @@
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="http://placehold.it/1200x400?text=IMAGE" alt="Image">
+<!--        <img src="https://lh5.googleusercontent.com/-ZXv4_a54UQ4/U9KWjUUlToI/AAAAAAAAJU0/1_LP5UQGlx8/w2400-h800/Millennium_Facebook.jpg" alt="Image" class="img-responsive fade">-->
+	<img src="http://www.interpacyachtcharters.com/wp-content/uploads/2011/03/TAHITI-DANCER-SUNSET.jpg" alt="Image" class="img-responsive fade">
         <div class="carousel-caption">
-          <h3>Sell $</h3>
-          <p>Money Money.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="http://mauivacationadventures.com/wp-content/uploads/2013/11/WHALE-TAILS-DK.jpg" alt="Image" class="img-responsive fade">
+        <div class="carousel-caption">
+        </div>
+      </div>
+      
+      <div class="item">
+        <img src="https://i2.wp.com/www.eventrebels.com/wp-content/uploads/2015/02/long-beach-california-01.jpg" alt="Image" class="img-responsive fade">
+        <div class="carousel-caption">
         </div>      
       </div>
 
       <div class="item">
-        <img src="http://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+        <img src="https://www.zegrahm.com/sites/zeg/files/styles/d2_hero_fp_scale_and_crop_2400x800/public/japn_1.jpg?t=1ANVP1&itok=f0UEbVbI" alt="Image" class="img-responsive fade">
         <div class="carousel-caption">
-          <h3>More Sell $</h3>
-          <p>Lorem ipsum...</p>
         </div>      
       </div>
     </div>
@@ -40,24 +51,23 @@
 </div>
   
 <div class="container text-center">    
-  <h3>What We Do</h3><br>
+<p><br></p>
+  <a href="/signup/"><button type="button" class="btn btn-primary btn-lg outline fade">Begin your next adventure with Fay Travel</button></a>
+<p><br></p>
+
   <div class="row">
     <div class="col-sm-4">
-      <img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Current Project</p>
+      <img src="https://s-media-cache-ak0.pinimg.com/736x/36/9c/ac/369cac8a27335f9369b7d690cb722037.jpg" class="fade img-responsive fadehover" style="width:100%" alt="Image">
+      
     </div>
     <div class="col-sm-4"> 
-      <img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Project 2</p>    
+      <img src="http://spawellbeing.com/image/tunisia-4.jpg" class="img-responsive fade fadehover" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4">
-      <div class="well">
-       <p>Some text..</p>
+            <img src="http://narratographer.com/wp-content/uploads/2016/04/The-Lonely-Path-To-Pulpit-Rock-600x320.jpg" class="img-responsive fade fadehover" style="width:100%" alt="Image">
+
+
       </div>
-      <div class="well">
-       <p>Some text..</p>
-      </div>
-    </div>
   </div>
 </div><br>
 {% endblock content %}
