--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -3,7 +3,7 @@
 <head>
 <title>{%block title %}twoefay client{% endblock title %}</title>
  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-
+<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <style type="text/css">
@@ -41,7 +41,92 @@
         max-width: 100%
     }
 
+    .fade {
+       opacity: 1;
+       -webkit-animation: fadein 2s;
+       -moz-animation: fadein 2.5s;
+       -ms-animation: fadein 2.5s;
+       animation: fadein 2.5s;
+    }
+    .fadehover {
+    }
+    
+    .fadehover:hover {
+       opacity: 0.5;
+       filter: alpha (opacity=50);
+       transition: opacity 1s ease 0s;
+    }
 
+    @keyframes fadein {
+       from {opacity: 0; }
+       to {opacity: 1; }
+    }
+
+    @-moz-keyframes fadein {
+       from {opacity: 0; }
+       to {opacity: 1; }
+    }
+
+    @-webkit-keyframes fadein {
+       from {opacity: 0; }
+       to {opacity: 1; }
+    }
+
+    @-ms-keyframes fadein {
+       from {opacity: 0;}
+       to {opacity: 1;}
+    }
+
+    .shadows-font {
+       font-family: 'Shadows Into Light', cursive;
+    }
+
+.btn {
+    padding: 14px 24px;
+    border: 0 none;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+ 
+.btn:focus, .btn:active:focus, .btn.active:focus {
+    outline: 0 none;
+}
+ 
+.btn-primary {
+    background: #0099cc;
+    color: #ffffff;
+}
+ 
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: #33a6cc;
+}
+ 
+.btn-primary:active, .btn-primary.active {
+    background: #007299;
+    box-shadow: none;
+}
+
+.btn.outline {
+    background: none;
+    padding: 12px 22px;
+}
+
+.btn-primary.outline {
+    border: 2px solid #0099cc;
+    color: #0099cc;
+}
+    
+    .btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+    color: #33a6cc;
+    border-color: #33a6cc;
+}
+.btn-primary.outline:active, .btn-primary.outline.active {
+    border-color: #007299;
+    color: #007299;
+    box-shadow: none;
+}
+    
   </style>
 </head>
 <body>
@@ -74,7 +159,7 @@
 </nav>
 
 {# The Document Body #}
-    <div id="site-wrapper">
+<div id="site-wrapper">
         {% block content %}
             if you see this, something is wrong!
         {% endblock content %}
@@ -84,10 +169,10 @@
         <div class="container">
         </div>
     </div>-->
-    <div class = "footer">
+    <div class = "footer fade">
       <div class="container">
     <footer class = "container-fluid text-center">
-      <p>Footer Text </p>
+      <p>&copy; Twoefay 2016 </p>
       </footer></div>
     </div>
 
