--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -41,6 +41,10 @@
         max-width: 100%
     }
 
+    .center {
+       text-align: center;
+    }
+
     .fade {
        opacity: 1;
        -webkit-animation: fadein 2s;
@@ -129,7 +133,7 @@
     
   </style>
 </head>
-<body>
+<body style="background-color:#e6e6e6;">
 <nav class="navbar navbar-default navbar-static-top navbar-inverse">
   <div class="container">
     <ul class="nav navbar-nav">
