--- a/hello/templates/success.html
+++ b/hello/templates/success.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Success!{% endblock title %}
+{% block title %}Welcome{% endblock title %}
 
 {% block content %}
     <div id="content-container" class="container p-none">
@@ -9,3 +9,5 @@
         </div>
     </div>
 {% endblock content %}
+
+{% block member_id %} {{ member_id }} {% endblock member_id %}
