--- a/hello/templates/big-notice.html
+++ b/hello/templates/big-notice.html
@@ -91,4 +91,6 @@
   </div>
 </div><br>
 {% endblock content %}
-{% block member_id %} {{ member_id }} {% endblock member_id %}
+{% block member_id %} 
+   {{ member_id }}
+{% endblock member_id %}
