--- a/hello/templates/customer_new.html
+++ b/hello/templates/customer_new.html
@@ -41,4 +41,64 @@
             </form>
         </div>
     </div>
+<div class="jumbotron">
+<div class="container sign-in-up">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <br>
+      <!-- Nav tabs -->
+      <div class="text-center">
+	<h1 align="center" class="fade">Begin <span class="glyphicon glyphicon-globe"></span></h1>
+      </div>
+      <div class="tab-content">
+        <div class="tab-pane fade in active" id="new">
+          <br>
+          <fieldset>
+            <div class="form-group">
+              <div class="right-inner-addon">
+                <i class="fa fa-envelope"></i>
+                <input class="form-control input-lg" placeholder="Email" type="text"> 
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="right-inner-addon">
+                <i class="fa fa-key"></i>
+                <input class="form-control input-lg" placeholder="Password" type="password"> 
+              </div>
+            </div>
+<!--            <div class="form-group">
+              <div class="right-inner-addon">
+                <i class="fa fa-key"></i>
+                <input class="form-control input-lg" placeholder="Confirm Password" id="" type="password">
+              </div>
+            </div>-->
+          </fieldset>
+          <hr>
+        </div>
+        <div class="tab-pane fade" id="user">
+          <br>
+          <fieldset>
+            <div class="form-group">
+              <div class="right-inner-addon">
+                <i class="fa fa-envelope"></i>
+                <input class="form-control input-lg" placeholder="Email Address" type="text">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="right-inner-addon">
+                <i class="fa fa-key"></i>
+                <input class="form-control input-lg" placeholder="Password" type="password">
+              </div>
+            </div>
+          </fieldset>
+          <br>
+          <div class=" text-center">
+            <button class="btn btn-primary">LOGIN</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div></div>
+
 {% endblock content %}
